<resources>
    <string name="app_name">DIY GPS Tracker</string>
    <string name="asset_name_hint">Asset name</string>
    <string name="add_button_title">Add</string>
    <string name="firestore_configuration">Firestore Configuration</string>
    <string name="firestore_configuration_help">Specify your Firestore project\'s settings. You will store your own data. Click on the title for help.</string>
    <string name="project_id_title">Project ID</string>
    <string name="project_id_help">Project ID of your Firebase / Firestore project</string>
    <string name="application_id_title">Application ID</string>
    <string name="application_id_help">Application ID of your Firebase / Firestore project</string>
    <string name="api_key_title">API Key</string>
    <string name="api_key_help">API Key of your Firebase / Firestore project</string>
    <string name="google_auth_title">Authentication Type</string>
    <string name="google_auth_help">Advising Email+password, try to avoid Anonymous</string>
    <string name="email_title">Email</string>
    <string name="email_help">(optional) Email in case of Email+password auth</string>
    <string name="code_title">Password</string>
    <string name="code_help">(optional) Password in case of Email+password auth</string>
    <string translatable="false" name="settings_help_key">settings_help</string>
    <string name="settings_help">Create your own Firestore project to store your own data. For detailed explanation see <a href="https://diygpstracker.github.io/" target="_blank">DIY GPS Tracker</a></string>
    <string name="settings_button_title">Settings</string>
    <string name="privacy_button_title">Privacy Policy</string>
    <string name="help_button_title">Help</string>
    <string translatable="false" name="connect_key">connect_button</string>
    <string name="connect">&#xbb;Connect&#xab;</string>
    <string name="connect_help">Click connect to continue</string>
    <string translatable="false" name="home_page_url">https://diygpstracker.github.io/</string>
    <string translatable="false" name="privacy_policy_url">https://diygpstracker.github.io/privacy/</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="unconfigured_firestore">Firestore not configured. Please specify Project ID, Application ID, and API Key then connect.</string>
    <string name="asset_button_title">Asset List</string>
    <string name="tracking_help">See LocationManager or FusedLocationAPI info below:</string>
    <string name="time_stamp">Time stamp</string>
    <string name="lat">Lat:</string>
    <string name="lon">Lon:</string>
    <string name="batt">Batt:</string>
    <string name="speed">Speed:</string>
    <string name="status_icon">Status Indicator Icon (if Alarm got triggered or not)</string>
    <string name="value_not_available">N/A</string>
    <string name="acknowledge">Acknowledge</string>
    <!-- Geo Fencing -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
    <string name="location_required_error">Location services must be enabled, because the essence of this app is to track your protected assets.</string>

    <!-- Geofence Status Strings -->
    <string name="geofence_added">Geofence added.</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofence_exited">Geofence exited.</string>
    <string name="geofences_not_removed">Geofences not removed.</string>
    <string name="geofence_not_added">Problem in adding geofence.</string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="geofence_error">There was an error in finding your treasure</string>
    <string name="permission_denied_explanation">
        You need to grant location permission in order to track and geofence.
    </string>
    <string name="settings">Settings</string>
    <string name="resolution_settings_error">Error getting location settings resolution: </string>

    <!-- Background Location permission Strings -->
    <string name="bg_location_warning_title">Location Permission Information</string>
    <string name="bg_location_warning">This app collects location data to make GPS tracking of your assets possible even when the app is closed or not in use. Location information is *ONLY PERSISTED INTO YOUR OWN* managed Firestore.</string>
</resources>
